# yoshlar_agentligi

./: .gitignore  README.md  direktor-frontend-api.md  docker-compose.yml  moderator-frontend-api.md  nginx.conf
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_all_domain_tables.py  0002_business_schema.py  0003_backups.py  0004_profile_extensions.py  0005_plan_notes_attachments.py  0005_users_masul_id.py  0006_missing_columns.py  0006_users_masul_id.py  9cfff8119071_add_email_to_masullar.py  b0d54a0c3c76_merge_heads.py
backend/app/: main.py
backend/app/admin/: router.py
backend/app/admin/audit/: router.py
backend/app/admin/backups/: models.py  router.py  service.py
backend/app/admin/reports/: router.py
backend/app/admin/system/: router.py  state.py
backend/app/admin/users/: router.py
backend/app/admin/youth/: router.py
backend/app/core/: audit_context.py  base_schema.py  config.py  constants.py  deps.py  exceptions.py  logging.py  openapi.py  security.py
backend/app/db/: session.py
backend/app/middleware/: rbac.py  request_id.py
backend/app/modules/ai/: service.py
backend/app/modules/audit/: models.py  repository.py  router.py  (+2 more)
backend/app/utils/: csv.py  pagination.py
backend/docs/: API_REFERENCE.md  direktor-frontend-api.md  moderator-frontend-api.md
backend/scripts/: seed_demo.py  seed_users.py
backend/tests/: conftest.py
backend/tests/unit/: test_direktor.py  test_health.py  test_moderator.py  test_security.py
(+212 files in other folders)
